--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body {
   background: url("img/bg.png") no-repeat top center;
   background-size: 100% auto;
 }
+@media (max-width: 375px) {
+  .main {
+    background: url("img/bg-mob.png") no-repeat top center;
+    background-size: cover;
+  }
+}
 
 .hero {
   padding: 100px 0 60px;
@@ -43,13 +49,15 @@ body {
 }
 .hero p {
   font-size: 18px;
-  margin-top: 10px;
+  margin-top: 24px;
   color: #333;
+  margin-bottom: 52px;
 }
 @media (max-width: 992px) {
   .hero p {
     padding-top: 16px;
     margin-top: 0px;
+    margin-bottom: 0px;
   }
 }
 .hero .btn-main {
@@ -104,7 +112,7 @@ body {
   max-width: 800px;
   margin: 20px auto;
   font-size: 18px;
-  line-height: 1.6;
+  line-height: 1.25;
 }
 @media (max-width: 992px) {
   .platform p {
@@ -132,6 +140,11 @@ body {
 @media (max-width: 992px) {
   .coverage {
     padding: 180px 0 0px;
+  }
+}
+@media (max-width: 375px) {
+  .coverage {
+    background: linear-gradient(to bottom, #f8fcfd 0%, #ffffff 100%);
   }
 }
 .coverage__bg-none {
