--- a/style.scss
+++ b/style.scss
@@ -25,8 +25,12 @@ body {
 
 
 .main {
-    background: url("img/bg.png") no-repeat top center;
-    background-size: 100% auto;
+  background: url("img/bg.png") no-repeat top center;
+  background-size: 100% auto;
+  @media (max-width: 375px) {
+    background: url("img/bg-mob.png") no-repeat top center;
+    background-size: cover;
+  }
 
 }
 // Hero Section
@@ -50,11 +54,13 @@ body {
 
   p {
     font-size: 18px;
-    margin-top: 10px;
+    margin-top: 24px;
     color: $color-text;
+    margin-bottom: 52px;
     @media (max-width: 992px) {
       padding-top: 16px;
       margin-top: 0px;
+      margin-bottom: 0px;
     }
   }
 
@@ -110,7 +116,7 @@ body {
     max-width: 800px;
     margin: 20px auto;
     font-size: 18px;
-    line-height: 1.6;
+    line-height: 1.25;
     @media (max-width: 992px) {
       font-size: 12px;
       padding:0 22px;
@@ -134,6 +140,10 @@ body {
   text-align: center;
   @media (max-width: 992px) {
     padding: 180px 0 0px;
+
+  }
+  @media (max-width: 375px) {
+    background: linear-gradient(to bottom, #f8fcfd 0%, #ffffff 100%);
   }
 
   // Фоновая карта
