--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .main {
+  padding-top: 60px;
   background: url("img/bg.png") no-repeat top center;
   background-size: 100% auto;
 }
@@ -23,6 +24,7 @@ body {
   .main {
     background: url("img/bg-mob.png") no-repeat top center;
     background-size: cover;
+    padding-top: 25px;
   }
 }
 
