--- a/style.scss
+++ b/style.scss
@@ -25,11 +25,13 @@ body {
 
 
 .main {
+  padding-top: 60px;
   background: url("img/bg.png") no-repeat top center;
   background-size: 100% auto;
   @media (max-width: 375px) {
     background: url("img/bg-mob.png") no-repeat top center;
     background-size: cover;
+    padding-top: 25px;
   }
 
 }
